fixing the layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,43 @@
+html {
+  box-sizing: border-box;
+  font-weight: bold;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
 body {
   font-size: 2em;
-  color: rgb(190, 1, 227);
-  padding: 20px;
-  margin: none;
-  background-image: url(Assets/dragonball1.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+  color: rgb(247, 246, 248);
+  padding: 10px;
+  margin: auto;
+  background: no-repeat url(Assets/dragonball1.png) center center;
   font-weight: bolder;
 }
 
 main {
-  display: grid;
-  grid-template-areas:
-    "player  cpu"
-    "hand  stats";
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 100px;
+}
+
+main div {
   text-align: center;
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  width: 500px;
 }
 
 img,
 button {
-  width: 250px;
-  height: 250px;
+  width: 230px;
+  height: 230px;
   border-radius: 75%;
-  border: 2px solid rgb(190, 1, 227);
-}
-
-h2 {
-  text-align: left;
-  font-size: 1.75em;
-  margin: 30px;
+  border: 3px solid rgb(190, 1, 227);
 }
 
 h1 {
@@ -45,39 +52,30 @@ h1 {
   -webkit-background-clip: text;
 }
 
+h2 {
+  font-size: 80px;
+  margin-left: 20px;
+  color: rgb(255, 255, 255);
+}
+
 h3 {
-  font-size: 2em;
-  margin: 30px;
+  font-size: 70px;
 }
 
-.player {
-  margin-right: 30%;
-  font-size: 1.5em;
-  padding: 20px;
-}
-
-.cpu {
-  font-size: 1.5em;
-  padding: 20px;
-  max-width: fit-content;
-}
-
-.hand {
-  font-size: 1.2em;
-  padding: 20px;
-}
-
-.stats {
-  font-size: 1.2em;
-  padding-left: 100px;
-  margin-left: 100px;
-  text-align: start;
+h4 {
+  font-size: 50px;
+  color: rgb(255, 255, 255);
 }
 
 #button {
-  background-color: blueviolet;
+  background-color: #d743f8;
   color: white;
   border-radius: 10%;
-  font-size: 1em;
+  font-size: 1.75em;
   cursor: pointer;
+}
+
+#resultgame {
+  background-color: #d241febb;
+  border-radius: 50% 25%;
 }
